# losswatch

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: gpt2_spike_demo.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/views/: DiffView.jsx  LayerDrilldown.jsx  SpikeInspector.jsx  Timeline.jsx
losswatch/: __init__.py  cli.py  replay.py  watch.py
losswatch/core/: __init__.py  config.py
losswatch/io/: __init__.py  writer.py
losswatch/ui/: __init__.py  server.py
tests/: conftest.py  test_buffer.py  test_detector.py  test_metrics.py  test_writer.py
trainscope/: __init__.py  cli.py  replay.py  scope.py
trainscope/core/: __init__.py  buffer.py  config.py  detector.py  metrics.py
trainscope/io/: __init__.py  writer.py
trainscope/ui/: __init__.py  server.py
