[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trainscope"
version = "0.1.0"
description = "Post-mortem debugger for LLM training loss spikes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "training", "debugging", "loss-spike", "pytorch", "deep-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "pyarrow>=14.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "click>=8.1",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.urls]
Homepage = "https://github.com/kaelvalen/trainscope"
Repository = "https://github.com/kaelvalen/trainscope"
"Bug Tracker" = "https://github.com/kaelvalen/trainscope/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
trainscope = "trainscope.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["trainscope"]
# The React build (npm run build) emits into trainscope/ui/static/ which is not
# tracked by VCS. Mark it as an artifact so hatchling includes it in the wheel
# even when building in a clean git checkout where the directory may be absent.
artifacts = ["trainscope/ui/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
